--- a/index.html
+++ b/index.html
@@ -47,57 +47,7 @@
 					</div>
 
 					<div id="navmenu" class="navbar-menu">
-						<div class="navbar-start">
-							<!-- <div
-						class="navbar-item has-dropdown is-hoverable"
-					>
-						<div class="navbar-dropdown is-boxed">
-							<a
-								class="navbar-item"
-								href="https://bulma.io/documentation/overview/start/"
-							>
-								Overview
-							</a>
-							<a
-								class="navbar-item"
-								href="https://bulma.io/documentation/overview/modifiers/"
-							>
-								Modifiers
-							</a>
-							<a
-								class="navbar-item"
-								href="https://bulma.io/documentation/columns/basics/"
-							>
-								Columns
-							</a>
-							<a
-								class="navbar-item"
-								href="https://bulma.io/documentation/layout/container/"
-							>
-								Layout
-							</a>
-							<a
-								class="navbar-item"
-								href="https://bulma.io/documentation/form/general/"
-							>
-								Form
-							</a>
-							<hr class="navbar-divider" />
-							<a
-								class="navbar-item"
-								href="https://bulma.io/documentation/elements/box/"
-							>
-								Elements
-							</a>
-							<a
-								class="navbar-item is-active"
-								href="https://bulma.io/documentation/components/breadcrumb/"
-							>
-								Components
-							</a>
-						</div>
-					</div> -->
-						</div>
+						<div class="navbar-start"></div>
 						<div class="navbar-end">
 							<a
 								class="navbar-item p-3 mx-3"
