--- a/index.html
+++ b/index.html
@@ -50,30 +50,51 @@
 						<div class="navbar-start"></div>
 						<div class="navbar-end">
 							<a
-								class="navbar-item p-3 mx-3"
+								class="navbar-item mx-3"
 								href="/"
 							>
+								<span class="icon">
+									<i class="fas fa-home"></i>
+								</span>
 								Accueil
 							</a>
 
 							<a
 								href="#section2"
-								class="navbar-item p-3 mx-3"
-								>Galerie</a
+								class="navbar-item mx-3"
 							>
+								<span class="icon">
+									<i
+										class="fa-solid fa-palette"
+									></i>
+								</span>
+								Galerie
+							</a>
 
 							<a
 								href="#section3"
-								class="navbar-item p-3 mx-3"
-								>Les cours et stages de
+								class="navbar-item mx-3"
+							>
+								<span class="icon">
+									<i
+										class="fa-solid fa-person-chalkboard"
+									></i>
+								</span>
+								Les cours et stages de
 								mosaiques</a
 							>
 
 							<a
 								href="#section3"
-								class="navbar-item p-3 mx-3"
-								>&nbsp;Contact&nbsp;</a
+								class="navbar-item mx-3"
 							>
+								<span class="icon">
+									<i
+										class="fa-solid fa-envelope"
+									></i>
+								</span>
+								&nbsp;Contact&nbsp;
+							</a>
 						</div>
 					</div>
 				</nav>
@@ -124,7 +145,7 @@
 						</p>
 					</div>
 					<figure
-						class="image is-4-by-5 p-5 is-hidden-tablet"
+						class="image is-4-by-5 p-5 is-hidden-tablet mb-5"
 					>
 						<img
 							alt="Marie-Laure Moulart Barcelo"
@@ -174,7 +195,7 @@
 						</p>
 					</div>
 					<figure
-						class="image is-4-by-5 p-5 is-hidden-tablet"
+						class="image is-4-by-5 p-5 is-hidden-tablet mb-5"
 					>
 						<img
 							alt="Tableau"
