Add autres pages

--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 			referrerpolicy="no-referrer"
 		/>
 	</head>
-
 	<body>
 		<section class="mlp-section">
 			<div class="mt-4 mr-4">
@@ -51,7 +50,7 @@
 						<div class="navbar-end">
 							<a
 								class="navbar-item mx-3"
-								href="/"
+								href="index.html"
 							>
 								<span class="icon">
 									<i class="fas fa-home"></i>
@@ -60,7 +59,7 @@
 							</a>
 
 							<a
-								href="#section2"
+								href="galerie.html"
 								class="navbar-item mx-3"
 							>
 								<span class="icon">
@@ -72,7 +71,7 @@
 							</a>
 
 							<a
-								href="#section3"
+								href="coursStages.html"
 								class="navbar-item mx-3"
 							>
 								<span class="icon">
@@ -83,6 +82,18 @@
 								Les cours et stages de
 								mosaiques</a
 							>
+
+							<a
+							href="art_therapie.html"
+							class="navbar-item mx-3"
+						>
+							<span class="icon">
+								<i
+									class="fa-solid fa-person-chalkboard"
+								></i>
+							</span>
+							L'art Thérapie</a
+						>
 
 							<a
 								href="#section3"
@@ -170,7 +181,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<!-- Second section -->
 		<section
 			class="mlp-section section"
