--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
               <a href="#section3" class="navbar-item mx-3">
                 <span class="icon">
-                  <i class="fa-solid fa-envelope"></i>
+                  <i class="fa-solid fa-hand-holding-hand"></i>
                 </span>
                 Art thérapie
               </a>
