--- a/coursStages.html
+++ b/coursStages.html
@@ -16,86 +16,62 @@
 
 <body>
 	<section class="mlp-section">
-		<div class="mt-4 mr-4">
-			<nav class="navbar is-transparent">
-				<div class="navbar-brand">
-					<div
-						class="navbar-burger"
-						data-target="navmenu"
-						aria-label="menu"
-						aria-expanded="false"
-					>
-						<span aria-hidden="true"></span>
-						<span aria-hidden="true"></span>
-						<span aria-hidden="true"></span>
-					</div>
-				</div>
+      <div class="mt-4 mr-4">
+        <nav class="navbar is-transparent">
+          <div class="navbar-brand">
+            <div
+              class="navbar-burger"
+              data-target="navmenu"
+              aria-label="menu"
+              aria-expanded="false"
+            >
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </div>
+          </div>
 
-				<div id="navmenu" class="navbar-menu">
-					<div class="navbar-start"></div>
-					<div class="navbar-end">
-						<a
-							class="navbar-item mx-3"
-							href="index.html"
-						>
-							<span class="icon">
-								<i class="fas fa-home"></i>
-							</span>
-							Accueil
-						</a>
+          <div id="navmenu" class="navbar-menu">
+            <div class="navbar-start"></div>
+            <div class="navbar-end">
+              <a class="navbar-item mx-3" href="index.html">
+                <span class="icon">
+                  <i class="fas fa-home"></i>
+                </span>
+                Accueil
+              </a>
 
-						<a
-							href="galerie.html"
-							class="navbar-item mx-3"
-						>
-							<span class="icon">
-								<i
-									class="fa-solid fa-palette"
-								></i>
-							</span>
-							Galerie
-						</a>
+              <a href="./galerie.html" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-palette"></i>
+                </span>
+                Galerie
+              </a>
 
-						<a
-							href="coursStages.html"
-							class="navbar-item mx-3"
-						>
-							<span class="icon">
-								<i
-									class="fa-solid fa-person-chalkboard"
-								></i>
-							</span>
-							Les cours et stages de
-							mosaiques</a
-						>
+              <a href="./coursStages.html" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-person-chalkboard"></i>
+                </span>
+                Les cours et stages de mosaiques</a
+              >
 
-						<a
-						href="art_therapie.html"
-						class="navbar-item mx-3"
-					>
-						<span class="icon">
-							<i
-								class="fa-solid fa-person-chalkboard"
-							></i>
-						</span>
-						L'art Thérapie</a
-					>
+              <a href="./art_therapie.html" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-hand-holding-hand"></i>
+                </span>
+                Art thérapie
+              </a>
 
-						<a
-							href="#section3"
-							class="navbar-item mx-3"
-						>
-							<span class="icon">
-								<i
-									class="fa-solid fa-envelope"
-								></i>
-							</span>
-							&nbsp;Contact&nbsp;
-						</a>
-					</div>
-				</div>
-			</nav>
-		</div>
+              <a href="#section3" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-envelope"></i>
+                </span>
+                &nbsp;Contact&nbsp;
+              </a>
+            </div>
+          </div>
+        </nav>
+      </div>
 
 		<section class="section">
 			<div class="container">
