--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div id="navmenu" class="navbar-menu">
             <div class="navbar-start"></div>
             <div class="navbar-end">
-              <a class="navbar-item mx-3" href="/index.html">
+              <a class="navbar-item mx-3" href="index.html">
                 <span class="icon">
                   <i class="fas fa-home"></i>
                 </span>
