--- a/coursStages.html
+++ b/coursStages.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <title>MLMB Art-Thérapie</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<title>MLMB Art-Thérapie</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="style.css" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" />
-	<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700" rel="stylesheet" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-		integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-
-<body>
-	<section class="mlp-section">
+  <body>
+    <section class="mlp-section">
       <div class="mt-4 mr-4">
         <nav class="navbar is-transparent">
           <div class="navbar-brand">
@@ -73,197 +82,236 @@
         </nav>
       </div>
 
-		<section class="section">
-			<div class="container">
-				<div class="block" style="padding-top: 15vh;">
+      <section class="mt-5">
+        <div class="section mt-5">
+          <div class="columns">
+            <div class="column flex-column">
+              <h2 class="is-size-3 has-text-justify subtitle">
+                Les cours et stages de mosaiques
+              </h2>
+              <div class="block">
+                <p class="mlp-paragraph">
+                  L’atelier organise à l’année des cours et des stages pour
+                  enfants ados et adultes, groupes scolaires, colonies, etc.
+                </p>
+                <p class="mlp-paragraph">
+                  Débutant ou initié, vous pourrez apprendre les techniques de
+                  base ou progresser sur de nouvelles créations.
+                </p>
+                <p class="mlp-paragraph">
+                  Dans une ambiance calme et conviviale, venez réaliser une
+                  mosaïque. Enfants, ados et adultes, en groupe : les cours
+                  s’adaptent. Laissez votre créativité s’exprimer !
+                </p>
+              </div>
+            </div>
+            <div class="column is-flex is-centered my-auto">
+              <figure class="image">
+                <img src="Cours_adultes.jpg" alt="image-cours-adulte-atelier" />
+              </figure>
+            </div>
+          </div>
+        </div>
+        <div class="section mt-5">
+          <div class="columns">
+            <div class="column is-flex is-centered my-auto is-hidden-mobile">
+              <figure class="image">
+                <img
+                  src="./Galerie/galerie7.jpg"
+                  alt="image-cours-adulte-atelier"
+                  loading="lazy"
+                />
+              </figure>
+            </div>
+            <div class="column flex-column">
+              <div class="block">
+                <p class="mlp-paragraph">
+                  L’enseignement à l’Atelier mènera les stagiaires débutants,
+                  guidés par Marie-Laure, vers des techniques diverses
+                  nécessaires à la création d’une œuvre personnelle.
+                </p>
+                <p class="mlp-paragraph">
+                  Initiés,les cours vous amèneront à affiner vos techniques en
+                  découvrant de nouvelles méthodes de travail qui stimuleront
+                  votre créativité et vos sens artistiques.
+                </p>
+              </div>
+            </div>
+            <div class="column is-flex is-centered my-auto is-hidden-tablet">
+              <figure class="image">
+                <img
+                  src="./Galerie/galerie7.jpg"
+                  alt="image-cours-adulte-atelier"
+                  loading="lazy"
+                />
+              </figure>
+            </div>
+          </div>
+        </div>
+        <div class="section bg-blue my-5">
+          <div class="columns mt-5">
+            <div class="column is-half mx-auto">
+              <p class="mlp-paragraph has-text-centered">
+                L’atelier vous propose des séances de 2 heures qui se déroulent
+                soit le matin de 10h à 12h soit l’après-midi de 14h30 à 16h30,
+                ainsi qu’un cours en soirée de 18h à 20h selon les
+                disponibilités du planning.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="section" style="padding-top: 10vh">
+          <div class="block">
+            <h2 class="is-size-3 has-text-justify subtitle">
+              Tarifs de l'atelier de Saint Gué
+            </h2>
+          </div>
+          <div class="columns is-gapless">
+            <div class="column is-flex my-4">
+              <div class="has-text-centered mx-auto">
+                <table class="table has-text-centered price-table">
+                  <thead>
+                    <tr>
+                      <th>Nombres de séances</th>
+                      <th>Prix en euros ttc</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>2</td>
+                      <td>50</td>
+                    </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>70</td>
+                    </tr>
+                    <tr>
+                      <td>4</td>
+                      <td>90</td>
+                    </tr>
+                    <tr>
+                      <td>5</td>
+                      <td>110</td>
+                    </tr>
+                    <tr>
+                      <td>6</td>
+                      <td>130</td>
+                    </tr>
+                    <tr>
+                      <td>7</td>
+                      <td>150</td>
+                    </tr>
+                    <tr>
+                      <td>8</td>
+                      <td>160</td>
+                    </tr>
+                    <tr>
+                      <td>9</td>
+                      <td>170</td>
+                    </tr>
+                    <tr>
+                      <td>10</td>
+                      <td>180</td>
+                    </tr>
+                  </tbody>
+                </table>
+                <!--FIN Table Section prix-->
+              </div>
+            </div>
+            <div class="column is-flex is-8">
+              <div class="block my-auto">
+                <p class="mlp-paragraph">
+                  Une séance dure 2 heures ; deux séances minimum. Tarifs
+                  dégressifs à partir de la 3ème et 7ème séance. Modes de
+                  règlement acceptés : chèques et espèces
+                </p>
+                <p class="mlp-paragraph">
+                  Les tarifs comprennent le prêt de l’outillage, tous les
+                  matériaux (émaux, pâtes de verre, ardoise, miroir, grès) colle
+                  et ciment. Des petits supports en bois, des planches petit
+                  format ainsi que du filet sont à votre disposition. Si vous
+                  souhaitez travaillez une autre dimension ou d’autres
+                  matériaux, vous en aurez la charge.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-				</div>
-				<div class="columns">
-					<div class="column flex-column">
-						<h2 class="is-size-3 has-text-justify subtitle">
-							Les cours et stages de mosaiques
-						</h2>
-						<div class="block">
+      <canvas
+        class="Board-Canvas absolute-origin in-background"
+        id="canvas1"
+        style="display: none"
+      ></canvas>
+    </section>
 
-							<p class="mlp-paragraph">
-								L’atelier organise à l’année des cours et des stages pour enfants ados et adultes, groupes scolaires,
-								colonies, etc.
-							</p>
+    <section class="section">
+      <div class="container">
+        <div class="block">
+          <h2 class="is-size-3 has-text-justify subtitle">
+            Groupes colonies et écoles
+          </h2>
+        </div>
 
-							<p class="mlp-paragraph">
-								Débutant ou initié, vous pourrez apprendre les techniques de base ou progresser sur de nouvelles
-								créations.
-							</p>
-							<p class="mlp-paragraph">
-								Dans une ambiance calme et conviviale, venez réaliser une mosaïque. Enfants, ados et adultes, en groupe
-								: les cours s’adaptent. Laissez votre créativité s’exprimer ! L’enseignement à l’Atelier mènera les
-								stagiaires débutants, guidés par Marie-Laure, vers des techniques diverses nécessaires à la création
-								d’une œuvre personnelle. Initiés, les cours vous amèneront à affiner vos techniques en découvrant de
-								nouvelles méthodes de travail qui stimuleront votre créativité et vos sens artistiques.
-							</p>
-							<p class="mlp-paragraph">
-								L’atelier vous propose des séances de 2 heures qui se déroulent soit le matin de 10 à 12 soit
-								l’après-midi de 14h30 à 16h30, ainsi qu’un cours en soirée de 18h à 20h selon les disponibilités du
-								planning.
-							</p>
+        <div class="content">
+          <p class="mlp-paragraph">
+            L’Atelier propose d’animer un atelier mosaïque auprès d’enfant en
+            structure scolaire ou de loisirs. De manière ludique, les enfants
+            ont la possibilité de développer de nouvelles compétences plastiques
+            en explorant les formes et les couleurs ainsi que les possibilités
+            d’assemblage. <br />L’activité mosaïque leur permettra de développer
+            à la fois leur créativité et leur concentration dans la réalisation
+            de leur production (qu’elle soit individuelle ou collective). Pour
+            plus d’infos sur la mise en œuvre d’atelier mosaïque n’hésitez pas à
+            me contacter. L’Atelier se déplace aussi à l’extérieur !
+          </p>
+        </div>
+      </div>
+    </section>
 
-						</div>
-					</div>
-					<div class="column is-flex is-centered">
-						<figure class="image">
-							<img src="Cours_adultes.jpg" alt="image-cours-adulte-atelier">
-						</figure>
-					</div>
-				</div>
-			</div>
+    <section class="mlp-section section" id="section4" style="display: none">
+      <canvas
+        class="Board-Canvas absolute-origin in-background"
+        id="canvas2"
+      ></canvas>
+    </section>
+  </body>
 
-			<div class="container " style="padding-top: 10vh;">
-				<div class="block">
-					<h2 class="is-size-3 has-text-justify subtitle">
-						Tarifs de l'atelier de Saint Gué
-					</h2>
-				</div>
-				<div class="columns is-gapless">
-					<div class="column is-flex">
-						<div class="has-text-centered">
-							<table class="table has-text-centered price-table">
-								<thead>
-									<tr>
-										<th>Nombres de séances</th>
-										<th>Prix en euros ttc</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>2</td>
-										<td>50</td>
-									</tr>
-									<tr>
-										<td>3</td>
-										<td>70</td>
-									</tr>
-									<tr>
-										<td>4</td>
-										<td>90</td>
-									</tr>
-									<tr>
-										<td>5</td>
-										<td>110</td>
-									</tr>
-									<tr>
-										<td>6</td>
-										<td>130</td>
-									</tr>
-									<tr>
-										<td>7</td>
-										<td>150</td>
-									</tr>
-									<tr>
-										<td>8</td>
-										<td>160</td>
-									</tr>
-									<tr>
-										<td>9</td>
-										<td>170</td>
-									</tr>
-									<tr>
-										<td>10</td>
-										<td>180</td>
-									</tr>
+  <script src="./Canima/Support/Canvarea.js "></script>
+  <script src="./Canima/Geometry/Figure.js "></script>
+  <script src="./Canima/Geometry/Line.js "></script>
+  <script src="./Canima/Geometry/Curve.js "></script>
+  <script src="./Canima/Medium/Filter.js "></script>
+  <script src="./Canima/Medium/Brushstroke.js "></script>
+  <script src="./Canima/Color/Gradient.js "></script>
+  <script src="./Canima/Geometry/Text.js "></script>
 
-								</tbody>
-							</table>
-							<!--FIN Table Section prix-->
-						</div>
-					</div>
-					<div class="column is-flex is-8">
-						<div class="block">
-							<p class="mlp-paragraph">Une séance dure 2 heures ; deux séances minimum.
-								Tarifs dégressifs à partir de la 3ème et 7ème séance.
-								Modes de règlement acceptés : chèques et espèces </p>
-							<p class="mlp-paragraph">
-								Les tarifs comprennent le prêt de l’outillage, tous les matériaux (émaux, pâtes de verre, ardoise,
-								miroir, grès) colle et ciment. Des petits supports en bois, des planches petit format ainsi que du filet
-								sont à votre disposition.
-								Si vous souhaitez travaillez une autre dimension ou d’autres matériaux, vous en aurez la charge.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
+  <script src="./Canima/Architecture/Canima.js "></script>
 
-		<canvas class="Board-Canvas absolute-origin in-background" id="canvas1"></canvas>
-	</section>
+  <script src="brushStrokesDefs.js "></script>
+  <script src="canvasDisplay.js "></script>
 
-	<section class="section">
-		<div class="container">
-			<div class="block">
-				<h2 class="is-size-3 has-text-justify subtitle">
-					Groupes colonies et écoles
-				</h2>
-			</div>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      // Get all "navbar-burger" elements
+      const $navbarBurgers = Array.prototype.slice.call(
+        document.querySelectorAll(".navbar-burger"),
+        0
+      );
 
-			<div class="content">
-				<p class="mlp-paragraph">L’Atelier propose d’animer un atelier mosaïque auprès d’enfant en structure scolaire ou de loisirs. De manière ludique, les enfants ont la possibilité de développer de nouvelles compétences plastiques en explorant les formes et les couleurs ainsi que les possibilités d’assemblage. L’activité mosaïque leur permettra de développer à la fois leur créativité et leur concentration dans la réalisation de leur production (qu’elle soit individuelle ou collective).
-					Pour plus d’infos sur la mise en œuvre d’atelier mosaïque n’hésitez pas à me contacter.
-					L’Atelier se déplace aussi à l’extérieur !
-					</p>
-			</div>
-		</div>
-		
-	</section>
+      // Add a click event on each of them
+      $navbarBurgers.forEach((el) => {
+        el.addEventListener("click", () => {
+          // Get the target from the "data-target" attribute
+          const target = el.dataset.target;
+          const $target = document.getElementById(target);
 
-
-	<section class="mlp-section section" id="section4" style="display: none;">
-
-		<canvas class="Board-Canvas absolute-origin in-background" id="canvas2"></canvas>
-	</section>
-</body>
-
-
-<script src="./Canima/Support/Canvarea.js "></script>
-<script src="./Canima/Geometry/Figure.js "></script>
-<script src="./Canima/Geometry/Line.js "></script>
-<script src="./Canima/Geometry/Curve.js "></script>
-<script src="./Canima/Medium/Filter.js "></script>
-<script src="./Canima/Medium/Brushstroke.js "></script>
-<script src="./Canima/Color/Gradient.js "></script>
-<script src="./Canima/Geometry/Text.js "></script>
-
-<script src="./Canima/Architecture/Canima.js "></script>
-
-<script src="brushStrokesDefs.js "></script>
-<script src="canvasDisplay.js "></script>
-
-<script>
-	document.addEventListener(
-		'DOMContentLoaded',
-		() => {
-			// Get all "navbar-burger" elements
-			const $navbarBurgers =
-				Array.prototype.slice.call(
-					document.querySelectorAll(
-						'.navbar-burger'
-					),
-					0
-				);
-
-			// Add a click event on each of them
-			$navbarBurgers.forEach((el) => {
-				el.addEventListener('click', () => {
-					// Get the target from the "data-target" attribute
-					const target = el.dataset.target;
-					const $target =
-						document.getElementById(target);
-
-					// Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
-					el.classList.toggle('is-active');
-					$target.classList.toggle('is-active');
-				});
-			});
-		}
-	);
-</script>
-
+          // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+          el.classList.toggle("is-active");
+          $target.classList.toggle("is-active");
+        });
+      });
+    });
+  </script>
 </html>
