--- a/art_therapie.html
+++ b/art_therapie.html
@@ -70,7 +70,7 @@
                 Art thérapie
               </a>
 
-              <a href="#section3" class="navbar-item mx-3">
+              <a href="index.html#section4" class="navbar-item mx-3">
                 <span class="icon">
                   <i class="fa-solid fa-envelope"></i>
                 </span>
@@ -83,40 +83,66 @@
 
       <canvas
         class="Board-Canvas absolute-origin in-background"
+        style="display: none"
         id="canvas1"
       ></canvas>
       <section class="section" style="padding-top: 15vh">
         <div class="container">
-          <div class="block">
-            <h2 class="is-3 subtitle">L'art Thérapie</h2>
-          </div>
-          <div class="block">
-            <h3 class="is-4 subtitle">Qu'est-ce que l'art thérapie ?</h3>
-          </div>
-          <div class="block">
-            <p class="mlp-paragraph">
-              Lorsque la parole est bloquée ou insuffisante, lorsque l’esprit
-              conscient empêche l’inconscient de se manifester, l’Art-thérapie
-              offre d’autres moyens d’expression que le langage verbal. C’est
-              une démarche créatrice accompagnée, qui utilise la création
-              artistique dans un but thérapeutique. L’art va permettre de
-              stimuler les capacités sensorielles, cognitives et motrices. Il va
-              pénétrer les problématiques inconscientes et conduire à une
-              transformation positive.
-            </p>
-          </div>
-          <div class="block">
-            <p class="mlp-paragraph">
-              L’ouverture de mon atelier d’artiste m’a aidé à développer ma
-              capacité créative en utilisant la technique de la mosaïque et de
-              la peinture. J’y anime et encadre des ateliers. Cette démarche
-              artistique va permettre à chacun de s’exprimer, de se raconter et
-              enfin de se révéler à travers sa production. Pour Qui ? Toute
-              personne peut bénéficier de l’Art-thérapie à tout âge. Pour Quoi ?
-              Elle s’utilise dans de nombreux domaines : la dépression,
-              l’addiction, phobie, anxiété, difficulté relationnelles, perte
-              affective, troubles psychiatriques, maladie somatiques, etc…
-            </p>
+          <div class="columns">
+            <div class="column">
+              <figure class="image mx-auto my-auto is-hidden-mobile">
+                <img
+                  style="max-height: 800px; width: 80%; object-fit: cover"
+                  src="./poissons-detail.png"
+                  alt="image-cours-adulte-atelier"
+                />
+              </figure>
+            </div>
+            <div class="column is-two-third">
+              <div class="block">
+                <h2 class="is-3 subtitle">L'art Thérapie</h2>
+              </div>
+              <div class="block">
+                <h3 class="is-4 subtitle">Qu'est-ce que l'art thérapie ?</h3>
+              </div>
+              <div class="block">
+                <p class="mlp-paragraph">
+                  Lorsque la parole est bloquée ou insuffisante, lorsque
+                  l’esprit conscient empêche l’inconscient de se manifester,
+                  l’Art-thérapie offre d’autres moyens d’expression que le
+                  langage verbal. C’est une démarche créatrice accompagnée, qui
+                  utilise la création artistique dans un but thérapeutique.
+                  L’art va permettre de stimuler les capacités sensorielles,
+                  cognitives et motrices. Il va pénétrer les problématiques
+                  inconscientes et conduire à une transformation positive.
+                </p>
+              </div>
+              <figure class="image mx-auto my-auto is-hidden-tablet mx-auto">
+                <img
+                  style="max-height: 800px; object-fit: cover"
+                  src="./poissons-detail.png"
+                  alt="image-cours-adulte-atelier"
+                />
+              </figure>
+              <div class="block">
+                <div class="block mt-5">
+                  <h3 class="is-4 subtitle">Un soin par l'expression</h3>
+                </div>
+                <p class="mlp-paragraph">
+                  L’ouverture de mon atelier d’artiste m’a aidé à développer ma
+                  capacité créative en utilisant la technique de la mosaïque et
+                  de la peinture.<br />
+                  J’y anime et encadre des ateliers. Cette démarche artistique
+                  va permettre à chacun de s’exprimer, de se raconter et enfin
+                  de se révéler à travers sa production.<br />
+                  Pour Qui ? Toute personne peut bénéficier de l’Art-thérapie à
+                  tout âge. <br />Pour Quoi ? Elle s’utilise dans de nombreux
+                  domaines : la dépression, l’addiction, phobie, anxiété,
+                  difficulté relationnelles, perte affective, troubles
+                  psychiatriques, maladie somatiques, etc…
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
