--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
           <div class="block">
             <h2 class="is-size-3 has-text-justify subtitle">La galerie</h2>
             <p class="mlp-paragraph">
-              Visiter l’Atelier est aussi l’occasion de découvrir les créations
-              originales de Marie-Laure ou de lui passer une commande
-              personnalisée.
+              Visiter l’Atelier est aussi l’occasion de découvrir les
+              <a href="galerie.html"> créations originales de Marie-Laure</a> ou
+              de lui passer une commande personnalisée.
             </p>
           </div>
           <figure class="image is-4-by-5 p-5 is-hidden-tablet mb-5">
@@ -160,7 +160,8 @@
           <div class="block mt-auto">
             <h2 class="is-size-3 has-text-justify subtitle">L'art thérapie</h2>
             <p class="mlp-paragraph">
-              Vous pouvez bénéficier à l’Atelier de séances d’art thérapie : un
+              Vous pouvez bénéficier à l’Atelier de
+              <a href="art_therapie.html">séances d’art thérapie</a> : un
               accompagnement thérapeutique individualisé qui exploite votre
               potentiel artistique pour retrouver sérénité et joie de vivre.
             </p>
