--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
             <p class="mlp-paragraph">
               Marie-Laure Moulart-Barcelo - artiste-mosaïste et art-thérapeute -
               vous accueille à l’Atelier pour vous initier à sa pratique
-              artistique à travers des cours et stages de mosaïque ponctuels ou
-              réguliers et ouverts à toutes et tous. <br />
+              artistique à travers des
+              <a href="coursStages.html"> cours et stages de mosaïque</a>
+              ponctuels ou réguliers et ouverts à toutes et tous. <br />
             </p>
           </div>
           <figure class="image is-4-by-5 p-5 is-hidden-tablet mb-5">
